@@ -4,6 +4,7 @@
 
 * FEATURE: Add support for the DB2 database.
 * FEATURE: Add support for topics of the form "Topic/Subtopic".
+* FEATURE: Support for interwiki links ([[Wikipedia:Main Page]]).
 * FEATURE: Add additional database validation checks during setup.
 * FEATURE: Re-engineer link handling to simplify the code.
 * FEATURE: Use the file system, not RAM, when rebuilding search index.
